syntax = "proto3";
package proto;
option go_package = "./proto";

message RequestCid {
  string cid = 1;
}

message RequestHospcode {
  string hospcode = 1;
}

message RequestPatient {
  string hn = 1;
  string vn = 2;
  string hospcode = 3;
}

message InfoResponse {
  message Info {
  string record_id = 1;
  string patient_hn = 2;
  string cid = 3;
  string hospcode = 4;
  string pname = 5;
  string fname = 6;
  string lname = 7;
  string birthdate = 8;
  }
  repeated Info results = 2;
}

message ServiceResponse {
  message Service {
  string record_id = 1;
  string hn = 2;
  string vn = 3;
  string hospcode = 4;
  string vstdate = 5;
  string vsttime = 6;
  string pttype = 7;
  string pttypeno = 8;
  string spclty = 9;
  string hospname = 10;
  }
  repeated Service services = 2;
}

message DoctorResponse {
  message Doctor {
    string name = 1;
    string licenseNo = 2;
    string cid= 3 ;
  }
  repeated Doctor Results = 2;
}

message ScreeningResponse {
  message Screening {
    string hn = 1;
    string vn = 2;
    string vstdate = 3;
    string vsttime = 4;
    string hospmain = 5;
    string hospsub = 6;
  }
}

message DiagnosisResponse {
  message Diagnosis {
    string hn = 1;
    string vn = 2;
    string vstdate = 3;
    string vsttime = 4;
    string hospmain = 5;
    string hospsub = 6;
  }
}

service EmrService {
  rpc PatientInfo(RequestCid) returns (InfoResponse) {}
  rpc GetServices(RequestCid) returns (ServiceResponse) {}
}

service DoctorService {
  rpc DoctorList(RequestHospcode) returns (DoctorResponse) {}
}

service PatientService {
  rpc ScreeningList(RequestPatient) returns (ScreeningResponse) {}
}